# mocap_ros2_py

./: README.md  README_cn.md  docker-compose.yaml  mocap_robotapi.py  mocap_to_robot_ros1.py  mocap_to_robot_ros2.py  mocap_to_stickman_ros1.py  mocap_to_stickman_ros2.py  requirements.txt  requirements_ros1.txt  robot_api_ros1.py  robot_api_ros2.py
docker/: Dockerfile
docker/ros2_ws/src/mocap_ros_urdf/: README.md
docker/ros2_ws/src/mocap_ros_urdf/unitree_g1_ros2/: CMakeLists.txt  package.xml
docker/ros2_ws/src/mocap_ros_urdf/unitree_g1_ros2/launch/: display.launch.py  gazebo.launch.py
docker/ros2_ws/src/mocap_ros_urdf/unitree_g1_ros2/mjcf/: scene.xml
docker/ros2_ws/src/mocap_ros_urdf/unitree_g1_ros2/urdf/: both_hands.urdf  dex3_1_l.urdf  dex3_1_r.urdf  g1_29dof_with_hand_rev_1_0.urdf
docker/ros2_ws/src/mocap_ros_urdf/unitree_h1_ros2/: CMakeLists.txt  README.md  package.xml
docker/ros2_ws/src/mocap_ros_urdf/unitree_h1_ros2/launch/: display.launch.py  gazebo.launch.py  rviz.rviz
docker/ros2_ws/src/mocap_ros_urdf/unitree_h1_ros2/urdf/: h1.urdf  h1_with_hand.urdf
docker/ros2_ws/src/pnmocap_tutorials/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
docker/ros2_ws/src/pnmocap_tutorials/pnmocap_tutorials/: mocap_robotapi.py  mocap_to_robot.py  mocap_to_stickman.py
docker/ros2_ws/src/pnmocap_tutorials/rviz/: demo.rviz
unitree_g1/: retarget.json
unitree_h1_ros1/: CMakeLists.txt  package.xml
unitree_h1_ros1/launch/: display.launch  rviz.rviz
unitree_h1_ros1/urdf/: h1_with_hand.urdf
unitree_h1_ros2/launch/: display.launch.py  gazebo.launch.py
urdfdemo_ros2/: retarget.json
