<?xml version="1.0"?>
<package format="3">
  <name>unitree_g1_ros2</name>
  <version>1.0.0</version>
  <description>The Unitree H1 Description Package</description>

  <maintainer email="TODO@email.com">Your Name</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Optional dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Exported information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
